<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/vista_principal"
    android:layout_width="fill_parent"
    android:layout_height="374dp"
    android:orientation="vertical" >

    <TextView
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:text="@string/nueva_factura" />

   
<TableLayout
    android:id="@+id/formularioFactura"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TableRow
        android:id="@+id/FilaConceptoFactura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        
        <TextView
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="@string/LabelConcepto" />

        <EditText
            android:id="@+id/TextoConceptoFactura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10" 
            android:inputType="text"/>

         <View
    				android:layout_width="fill_parent"
    				android:layout_height="15dp" />
         
    </TableRow>
    
    <TableRow
        android:id="@+id/FilaFechaFactura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        
        <TextView
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="@string/LabelFecha" />

        
        <DatePicker
            android:id="@+id/FechaFactura"
            android:calendarViewShown="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </TableRow>
    
    <TableRow
        android:id="@+id/FilaImporteFactura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        
        <TextView
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="@string/LabelImporte" />

        <EditText
            android:id="@+id/TextoImporteFactura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10" >

        </EditText>

    </TableRow>
    

</TableLayout>

     <View
    	android:layout_width="fill_parent"
    	android:layout_height="15dp" />
     
    <Button
        android:id="@+id/BotonGuardarFactura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar_factura" />

</LinearLayout>