<?xml version="1.0" encoding="utf-8"?>

<!-- 
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"  
        android:id="@+id/ScrollView02"  
      android:layout_height="wrap_content"   
      android:layout_width="match_parent"> 
-->      
   				
    <TabHost xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
    	android:layout_height="374dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
    				android:layout_height="374dp"
    				android:orientation="vertical">	
                    
                <TableLayout
    				android:id="@+id/tablaMenu"
    				android:layout_width="match_parent"
    				android:layout_height="wrap_content" >

    				<TableRow
        				android:id="@+id/tablaMenu1"
        				android:layout_width="wrap_content"
        				android:layout_height="wrap_content" > 
                    
    				    <View
    						android:layout_width="match_parent"
    						android:layout_height="15dp" />
    				    
                		<TextView
        					android:layout_width="102dp"
        					android:layout_height="wrap_content"
        					android:text="@string/seleccione_mes" />
                		
                		

                		<Spinner
                    		android:id="@+id/comboMeses"
                    		android:layout_width="wrap_content"
                    		android:layout_height="wrap_content" />
                		
                	</TableRow>
                	
    				</TableLayout>

                <View
    				android:layout_width="match_parent"
    				android:layout_height="15dp" />
                
                <TableLayout
    				android:id="@+id/tablaMesActual"
    				android:layout_width="match_parent"
    				android:layout_height="wrap_content" >
                
                    <TableRow
        				android:id="@+id/tablaMenu1"
        				android:layout_width="wrap_content"
        				android:layout_height="wrap_content" >
                		 
                	<TextView
                    		android:id="@+id/mesActualLabel"
        					android:layout_width="102dp"
        					android:layout_height="wrap_content"
        					android:text="@string/mesActual" />
                	
                	<TextView
                    		android:id="@+id/mesActualValue"
        					android:layout_width="102dp"
        					android:layout_height="wrap_content" />
                	
                	</TableRow>
                
                </TableLayout>
                
                <View
    				android:layout_width="match_parent"
    				android:layout_height="15dp" />
    			
                	<ScrollView 
                	    android:layout_width="wrap_content" 
                	    android:layout_height="wrap_content">
                    
    				<TableLayout
        				android:id="@+id/tablaFacturas"
        				android:layout_width="wrap_content"
        				android:layout_height="wrap_content" >
					</TableLayout>
					
    				</ScrollView>
                   
              	<!-- 
    			<View
    				android:layout_width="match_parent"
    				android:layout_height="15dp" />    
    				
    			-->
    			<LinearLayout
    			    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
    			
    			<Button
        			android:id="@+id/BotonAnterior"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:text="@string/anterior" />  
    			  
    			<Button
        			android:id="@+id/BotonNuevoRegistro"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:text="@string/nueva_factura" />
                    
    			<Button
        			android:id="@+id/BotonSiguiente"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:text="@string/siguiente" />  
    			
    			</LinearLayout>
    			
				</LinearLayout>
				
                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >
                    
                    <View
    				android:layout_width="match_parent"
    				android:layout_height="15dp" />    
    					
                    
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >
    				
                    <View
    				android:layout_width="match_parent"
    				android:layout_height="15dp" />    
    					
                    
                </LinearLayout>
                
            </FrameLayout>
        </LinearLayout>
    </TabHost>
<!-- 
</ScrollView>
-->


